--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,7 +11,7 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/rickandmorty
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL95Dialect
 
 spring.jpa.hibernate.ddl-auto=validate
-
-spring.flyway.user=postgres
-spring.flyway.password=postgres
-spring.flyway.url=jdbc:postgresql://localhost:5432/rickandmorty
+#
+#spring.flyway.user=postgres
+#spring.flyway.password=postgres
+#spring.flyway.url=jdbc:postgresql://localhost:5432/rickandmorty
