--- a/.env
+++ b/.env
@@ -1,8 +1,9 @@
-DB_NAME=postgres
+DB_NAME=rickandmorty
 DB_USER=postgres
 DB_PASSWORD=postgres
-POSTGRES_LOCAL_PORT=5433
+POSTGRES_LOCAL_PORT=5434
 POSTGRES_DOCKER_PORT=5432
+
 SPRING_LOCAL_PORT=8088
 SPRING_DOCKER_PORT=8080
 DEBUG_PORT=5005
